nats-micro/tests/ui/v2_zero_concurrency.stderr
error: concurrency must be greater than zero
 --> tests/ui/v2_zero_concurrency.rs:6:14
  |
6 |     async fn get() {}
  |              ^^^
